--- a/assets/style.css
+++ b/assets/style.css
@@ -11,3 +11,11 @@ body {
 .left-text {
     background-color: rgba(255, 255, 255, 0.16) !important;
 }
+.highcharts-container  {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.right-bottom-boder {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
